# avionmesh

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/avionmesh/: Mesh.py  __init__.py  __main__.py  mesh_handler.py
tests/: test_mesh.py
