[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avionmesh"
version = "2.0.8"
description = "Libary for integrating with Avion Bluetooth mesh lights"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "Sean Kinsey", email = "oyvind@kinsey.no"}
]
maintainers = [
    {name = "Sean Kinsey", email = "oyvind@kinsey.no"}
]
keywords = [
    "avion",
    "bluetooth",
    "mesh",
    "home-assistant",
    "smart-home",
    "iot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]

dependencies = [
    "aiorun>=2022.11.1",
    "bleak>=0.21.0",
    "recsrmesh",
]

[project.optional-dependencies]
cloud = [
    "avionhttp",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
mesh-tui = "avionmesh.__main__:main"

[project.urls]
Homepage = "https://github.com/oyvindkinsey/avionmesh"
Repository = "https://github.com/oyvindkinsey/avionmesh"
Issues = "https://github.com/oyvindkinsey/avionmesh/issues"
Documentation = "https://github.com/oyvindkinsey/avionmesh/blob/main/README.md"

# ============================================================================
# Tool configurations
# ============================================================================

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["avionmesh*"]
exclude = ["tests*"]

# ============================================================================
# pytest - Testing framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Add more verbose output
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Treat unregistered markers as errors
    "--strict-config",        # Treat config errors as errors
    "--showlocals",          # Show local variables in tracebacks
    "--tb=short",            # Shorter traceback format
    "--cov=avionmesh",       # Coverage for main package
    "--cov-report=term-missing",  # Show missing lines in terminal
    "--cov-report=html",     # Generate HTML coverage report
    "--cov-report=xml",      # Generate XML coverage for CI
]

# Markers for organizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "ble: marks tests that require BLE hardware",
    "mqtt: marks tests that require MQTT broker",
]

# Coverage settings
[tool.coverage.run]
source = ["src/avionmesh"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# mypy - Static type checking
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter checking
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
exclude = []
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================================
# Ruff - Linter and formatter
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py
"tests/*" = ["B", "F403", "F405"]  # More relaxed for tests

# ============================================================================
# bandit - Security linter
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
